Update website: edited index.html and style.css, added OG image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #6a0dad;
+    --primary-color: #9039cd;
     --secondary-color: #8a2be2;
-    --accent-color: #d8a6fe;
+    --accent-color: #c48fec;
     --light-accent:#daecf8;
     --dark-color: #333;
     --light-color: #fff;
